Try again at fixing white space issues

--- a/src/Face.css
+++ b/src/Face.css
@@ -5,7 +5,7 @@
 
 .faceHeader {
   background-color: #282c34;
-  min-height: 95vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
